# trainer

./: .flake8  .gitattributes  .gitignore  .golangci-kal.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  OWNERS  README.md  Tiltfile  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: build-and-push-images.yaml  check-pr-title.yaml  github-stale.yaml  publish-helm-charts.yaml  test-e2e-gpu.yaml  test-e2e.yaml  test-go.yaml  test-python.yaml  test-rust.yaml  trivy-scan.yaml
api/openapi-spec/: swagger.json
charts/kubeflow-trainer/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
cmd/data_cache/: Dockerfile
cmd/trainer-controller-manager/: Dockerfile  main.go
docs/release/: README.md
examples/local/: local-container-mnist.ipynb  local-training-mnist.ipynb
hack/: .custom-gcl.yaml  e2e-run-notebook.sh  e2e-setup-cluster.sh  e2e-setup-gpu-cluster.sh  update-codegen.sh  violation_exception_v1alpha1.list
hack/data_cache/: run_with_remote_table.sh
hack/python-api/: gen-api.sh
hack/scripts/: container-runtime.sh  load-image-to-kind.sh  setup-kind.sh
hack/swagger/: main.go
pkg/config/: config.go  validation.go
pkg/constants/: constants.go
pkg/controller/: trainjob_controller.go
pkg/data_cache/: Cargo.toml  OWNERS  README.md
pkg/data_cache/cmd/head/: main.rs
pkg/data_cache/cmd/worker/: main.rs
pkg/data_cache/src/: lib.rs
pkg/data_cache/src/config/: config.rs
pkg/data_cache/src/head/: head.rs  head_service.rs  mod.rs  provider.rs  writer.rs
pkg/data_cache/src/health/: mod.rs
pkg/data_cache/src/worker/: indexable_mem_table.rs  mod.rs  worker.rs  worker_datasource.rs  worker_service.rs
pkg/data_cache/test/: Cargo.toml
pkg/data_cache/test/src/: main.rs
pkg/webhooks/: clustertrainingruntime_webhook.go  clustertrainingruntime_webhook_test.go  trainingruntime_webhook.go  trainingruntime_webhook_test.go  trainjob_webhook_test.go
test/e2e/: e2e_test.go
test/util/: constants.go
(+135 files in other folders)
