[package]
name = "kubeflow_data_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.44.2", features = ["full"] }
datafusion = "47.0.0"
arrow = "55.0.0"
arrow-schema = "55.0.0"
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.86"
iceberg-datafusion = "0.5.0"
iceberg = "0.5.0"
futures = "0.3.31"
arrow-flight = "55.0.0"
tonic = "0.12.3"
bytes = "1.9.0"
bincode = "1.3"
trust-dns-resolver = "0.23.2"
axum = "0.7"
tower = "0.4"
hyper = "1.0"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }

[[bin]]
name = "head"
path = "cmd/head/main.rs"

[[bin]]
name = "worker"
path = "cmd/worker/main.rs"
