[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
arrow-flight = "55.0.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
bytes = "1.9.0"
bincode = "1.3"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.0", features = ["derive", "env"] }


[[bin]]
name = "client"
path = "src/main.rs"
